TypeScript Basics & Basic Types

--- a/01.TypeScript Basics & Basic Types/index.html
+++ b/01.TypeScript Basics & Basic Types/index.html
@@ -6,14 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TypeScript</title>
+    <script src="./016.Never-type/app.js" defer></script>
 </head>
 
 <body>
 
     <h1>Wellcome to TypeScript!</h1>
 
-
-    <script src="./output/script.js"></script>
 </body>
 
 </html>
